--- a/public/views/reg-view.html
+++ b/public/views/reg-view.html
@@ -15,7 +15,7 @@
 
 			<span class="link" data-ng-click="User.userViewSwitch='profile'; 
  											  User.profileSelect('Log');">
-											  (or Login with Facebook)</span>
+											  (or login with Facebook)</span>
 			</div>
 		
 
