--- a/public/views/tagSearch.html
+++ b/public/views/tagSearch.html
@@ -3,8 +3,6 @@
  		<div data-ng-controller="tagController as Tag"> <!-- tag controller begin -->
 			<div class="tagFrame">    <!--  tag search begin -->
 				 
-					<label class="label-space"></label>
-
 
  						<input  data-ng-model="Tag.tag"
 						class= "form-control" 
@@ -27,9 +25,9 @@
 						<span class="glyphicons globe"><img src="/images/glyphicons-globe-wht.png"></span>	
 						</a>
 
-						<span class='userMessage'>
+						<!-- <span class='userMessage'>
 							 {{User.userMessage}}
-						</span>
+						</span> -->
 
 
 			</div>  <!--  tag search end -->
