--- a/public/views/grid-day-view.html
+++ b/public/views/grid-day-view.html
@@ -1,13 +1,13 @@
-<div class="row bestDaysFrame" style="">
+<div class="row bestDaysFrame">
 
 <!-- TESTING GRID DAY VIEW - Day.days is: {{Day.days}}  and user is: {{User.username}}  
  -->  	
- 	<div data-ng-repeat="day in Day.days" class="col singleDay"> 
- 		 	<div class="title" data-ng-click ="Day.showOneDay(day._id,day.userName)">{{day.dayName}}</div>
+ 	<div data-ng-repeat="day in Day.days" class="col singleDay z-depth-3"> 
+ 		 	<a class="dayTitle"><div data-ng-click ="Day.showOneDay(day._id,day.userName)">{{day.dayName}}</div></a>
 
 		 	<div class="user">
  
-		 		<div  style="text-decoration: underline; cursor: pointer;"  
+		 		<div style="text-decoration: underline; cursor: pointer;"  
 		 			  data-ng-click="Day.getUserProfile(day.userName);">
 		 						   {{day.userName }}</div>
  		 	</div>
