--- a/public/views/login-view.html
+++ b/public/views/login-view.html
@@ -1,44 +1,24 @@
 <div class = "regSurround">
 
-<i data-ng-click = "User.userViewSwitch='grid';
- 					User.profileSelect(null); 
- 					"  
+<i data-ng-click="User.userViewSwitch='grid';
+ 					User.profileSelect(null);"  
 		class="material-icons right small" 
 		style ='cursor: pointer;'>clear
 </i>
 
-<br>
 
-<div class='loginDirection'>
-	Login with Facebook.  
-	<br>
-	<br>
-	<span >
-			<form data-ng-submit="User.facebook();
-								  User.profileSelect('facebook'); ">
-
-			<input class="btn btn-success btn-sm btn-block left" type="submit" value="Facebook"	>
-	</span>
+<div class='loginDirection'>Login with Facebook</div>
+<div>  		
+	<a 
+	data-ng-click="User.facebook();User.profileSelect('facebook');" 
+	class="waves-effect waves-light btn" 
+	type="submit">Facebook
+	<span class="glyphicons search"><img src="/images/social-facebook-wht.png"></span>
+	</a>
 </div>
 
-<br>
-<br>
-<br>
-<br>
 
-<!-- <div class='loginDirection'>
-	Login with your user name and password.  
-	<span class="link" data-ng-click=" User.userViewSwitch='profile'; 
-									   User.LoginError = false;
-									   User.profileSelect('NEWREG');   ">
-									    Register?</span>
-</div> -->
-
-
-
-<div class='loginDirection'>
-	Login with User Name and Password 
-
+<div class='loginDirection'>Login with Username and Password</div>
 <form>
 
 	<div class="form group">
@@ -55,47 +35,22 @@
 					ng-model="User.password">
 	</div>
 	
-	<input data-ng-click=" 	Day.getUserProfile(null);
+	<input data-ng-click="Day.getUserProfile(null);
 							User.profileMode=null;
 						    User.userViewSwitch='grid';
   					  	  	User.login();"
-			class="btn btn-success btn-sm btn-block left" 
+			class="waves-effect waves-light btn" 
 			type="submit" value="Login">
-	<br>
-	<br>
-	<div class="alertwarn" 
-		data-ng-show="User.LoginError === true">
-		Unknown user name or password.
-	</div>
- 
+
+ <div>
 </form>	
-<br>
-<br>
 
+<div class='loginDirection'>Forgot Username or Password?</div>
 
-<div class='loginDirection'>
-			Forgot Username or Password?
+<div>
+	<form data-ng-submit="User.profileSelect('recoverPassword'); ">
 
-<br>
-<br>
- 	<span>
-		<form data-ng-submit="User.profileSelect('recoverPassword'); ">
-
-		<input  
-			class="btn btn-success btn-sm btn-block left" 
-			type="submit" value='Click to Recover' ">
-	</span>
-	</div>
- <br>
- 
-
- 
-
-
-
- 
-</div>
-
-
-
- 
+		<button class="waves-effect waves-light btn" type="submit" value="Click to recover">Click to recover
+	
+	</button>
+</div> 
