--- a/public/views/login-view.html
+++ b/public/views/login-view.html
@@ -7,8 +7,10 @@
 </i>
 
 
-<div class='loginDirection'>Login with Facebook</div>
-<div>  		
+<div class='loginDirection'>Login with Facebook
+</div>
+
+<div class='loginFunction'>  		
 	<a 
 	data-ng-click="User.facebook();User.profileSelect('facebook');" 
 	class="waves-effect waves-light btn" 
@@ -17,40 +19,31 @@
 	</a>
 </div>
 
+<div class='loginDirection'>Login with Username and Password
+</div>		
 
-<div class='loginDirection'>Login with Username and Password</div>
-<form>
+<div class='loginFunction'>  		
+ 		<div class="form group">
+ 	 		<input class= "form-control" type="text" 
+	 					placeholder="User Name"
+						ng-model="User.username">
+ 			<input class= "form-control" type="password" placeholder="Password"
+						ng-model="User.password">
+		</div>
+		
+		<input data-ng-click="Day.getUserProfile(null);
+								User.profileMode=null;
+							    User.userViewSwitch='grid';
+	  					  	  	User.login();"
+				class="waves-effect waves-light btn" 
+				type="submit" value="Login">
+</div>
 
-	<div class="form group">
- 
 
-	<div class="form group">
- 		<input class= "form-control" type="text" 
- 					placeholder="User Name"
-					ng-model="User.username">
-	</div>
-
-	
-		<input class= "form-control" type="password" placeholder="Password"
-					ng-model="User.password">
-	</div>
-	
-	<input data-ng-click="Day.getUserProfile(null);
-							User.profileMode=null;
-						    User.userViewSwitch='grid';
-  					  	  	User.login();"
-			class="waves-effect waves-light btn" 
-			type="submit" value="Login">
-
- <div>
-</form>	
-
-<div class='loginDirection'>Forgot Username or Password?</div>
-
-<div>
+<div class='loginDirection'>Forgot Username or Password?
+</div>
+<div class='loginFunction'>  		
 	<form data-ng-submit="User.profileSelect('recoverPassword'); ">
-
-		<button class="waves-effect waves-light btn" type="submit" value="Click to recover">Click to recover
-	
+	<button class="waves-effect waves-light btn" type="submit" value="Click to recover">Click to recover
 	</button>
 </div> 
