--- a/public/views/reg-view.html
+++ b/public/views/reg-view.html
@@ -13,12 +13,13 @@
 		<div class='loginDirection'>
 			Register 
 
-			<span class="link" data-ng-click="User.userViewSwitch='profile'; 
- 											  User.profileSelect('Log');">
-											  (or login with Facebook)</span>
-			</div>
-		
 
+			<span class="link underline" data-ng-click="User.userViewSwitch='profile'; 
+ 											  User.profileSelect('Log');">
+											  (or Login with Facebook)</span>
+		</div>
+		
+		<br>
 
 		<div class="form group">
  				
@@ -137,4 +138,7 @@
 		value="Register Now!"> 
 
 	</form>
+
+	<br>
+	<br>
 </div> 
