--- a/public/views/viewDay.html
+++ b/public/views/viewDay.html
@@ -1,11 +1,16 @@
+<style>
+	div {
+		margin:8px 0;
+	}
+</style>
 <div class="row"> <!-- open row tag -->
  	<div class="col s4 m6 l7 left-align" style="padding:1rem;"> <!-- open column one -->		
 <!-- Begin conditional for not my day -->
 
-	<h4>Check out this perfect day.</h4>
+	<h3>Check out this perfect day</h3>
 
 	<div>{{Day.chosenDay.data[0].dayName}}</div>
-	<div>by&nbsp;<a href="">{{Day.chosenDay.data[0].userName}}</a></div>				
+	<div data-ng-click="Day.getUserProfile(Day.chosenDay.data[0].userName);">by&nbsp;<a href="">{{Day.chosenDay.data[0].userName}}</a></div>				
 	<div>{{Day.chosenDay.data[0].dayDate}}</div>
 	<div>{{Day.chosenDay.data[0].dayDesc}}</div>
 
@@ -20,19 +25,21 @@
 
 	<!-- LOCATION controller begin-->
 <!-- 	<div data-ng-controller="locationController as Location" class="form-group controller" style="margin:10px 0;"> -->
+		<div data-ng-repeat="Location in Day.chosenDay.data[0].locations">
 		<location-list></location-list>
+		</div>
 <!-- 	</div>
  -->	<!-- END LOCATION CONTROLLER -->
 
-	<div>Tags: {{Day.chosenDay.data[0].dayTags}}</div>
+	<div style="margin-bottom:24px;">Tags: {{Day.chosenDay.data[0].dayTags}}</div>
 	
-	<button class="btn btn-default" type="submit">Return home</button> 
+	<button class="btn btn-default" data-ng-click="User.userViewSwitch='grid'" type="submit">Return home</button> 
 	</div>
 <!-- End conditional for not my day -->
 	</div> <!-- close column 1 -->
 
 	<div class="col s8 m6 l5 left-align"> <!-- open column 2 -->
-		<div id="map-canvas"></div>		
+		<div id="map-canvas" style="position:absolute;top:200px;right:100px;"></div>		
 	</div> <!-- close column 2 -->
 </div>    <!--close row tag -->
 
