--- a/public/views/addDay.html
+++ b/public/views/addDay.html
@@ -1,7 +1,7 @@
 <div class="row"> <!-- open row tag -->
  	<div class="col s4 m6 l7 left-align" style="padding:1rem;"> <!-- open column one -->		
 		<!-- Begin conditional for add day -->
-		<div class="form-group addDay">
+		<div class="form-group">
 
 			<form>
 			<h4>Share Your Day</h4>
@@ -54,8 +54,9 @@
 	</div> <!-- close column 1 -->
 
 	<div class="col s8 m6 l5 left-align"> <!-- open column 2 -->
-	      <div id="place-id" style="visibility:hidden;"></div>
+	      <div id="place-id"></div>
 		<div id="map-canvas">			
 	</div> <!-- close column 2 -->
 </div>    <!--close row tag -->
 
+</div>
