--- a/public/views/updateDay.html
+++ b/public/views/updateDay.html
@@ -1,8 +1,8 @@
 <div class="row"> <!-- open row tag -->
  	<div class="col s4 m6 l7 left-align" style="padding:1rem;"> <!-- open column one -->		
 		<!-- Begin conditional for update day -->
-		<div class="form-group">
-			<form data-ng-model-options="{ getterSetter: true }">
+		<div class="form-group updateDay">
+			<form>
  
 			<h7>Update your day.</h7>
 			<input contentEditable="true" type="text" class="form-control name" id="daytitle" data-ng-model="Day.chosenDay.data[0].dayName">
@@ -52,7 +52,7 @@
 			<div data-ng-controller="tagController as Tag" class="form-group">
 				<div>Use spaces between tags.</div>
 				<input contentEditable="true" type="text" 
-				id="locdescription" 
+				id="tags"
 				class="form-control" 
 				placeholder="Enter some tags" 
 				data-ng-model="Day.chosenDay.data[0].dayTags">
@@ -72,7 +72,7 @@
 
 	 <!-- open column 2 -->
 	
-      <div id="place-id" style="visibility:hidden;"></div>
+      <div id="place-id"></div>
 		<div id="map-canvas">
 	</div>		
 
