--- a/public/views/viewDay.html
+++ b/public/views/viewDay.html
@@ -1,8 +1,3 @@
-<style>
-	div {
-		margin:8px 0;
-	}
-</style>
 <div class="row"> <!-- open row tag -->
  	<div class="col s4 m6 l7 left-align" style="padding:1rem;"> <!-- open column one -->		
 <!-- Begin conditional for not my day -->
@@ -15,11 +10,11 @@
 	<div>{{Day.chosenDay.data[0].dayDesc}}</div>
 
 	<div>      
-		<input type="checkbox" class="checkBox" id="test6 teenCheckbox" data-ng-model="day.dayTeen" data-ng-checked="{{Day.chosenDay.data[0].dayTeen}}" />
+		<input type="checkbox" class="checkBox" id="teenCheckbox" data-ng-model="day.dayTeen" data-ng-checked="{{Day.chosenDay.data[0].dayTeen}}" />
 		<label for="teenCheckbox">Teen friendly?</label>
 	</div>
 	<div>
-		<input type="checkbox" class="checkBox" id="test6 kidCheckbox" data-ng-checked="{{Day.chosenDay.data[0].dayChild}}" />
+		<input type="checkbox" class="checkBox" id="kidCheckbox" data-ng-checked="{{Day.chosenDay.data[0].dayChild}}" />
 		<label for="kidCheckbox">Kid friendly?</label>
 		</div>
 
@@ -39,7 +34,7 @@
 	</div> <!-- close column 1 -->
 
 	<div class="col s8 m6 l5 left-align"> <!-- open column 2 -->
-		<div id="map-canvas" style="position:absolute;top:200px;right:100px;"></div>		
+		<div id="map-canvas"></div>
 	</div> <!-- close column 2 -->
 </div>    <!--close row tag -->
 
