--- a/public/views/my-user-functions.html
+++ b/public/views/my-user-functions.html
@@ -62,7 +62,7 @@
 		   	</ul>
 
 
-<div class="fb-share-button" data-href="http://perfectdaybreak.com:8090" data-layout="button" style=" 1px solid grey;" ></div> 
+<!-- <div class="fb-share-button" data-href="http://perfectdaybreak.com:8090" data-layout="button" style=" 1px solid grey;" ></div>  -->
 
 
 					 
