--- a/public/views/updateDay.html
+++ b/public/views/updateDay.html
@@ -42,7 +42,7 @@
  
 				<input type="text" class="form-control daytitle" id="pac-input" placeholder="Type a location..." data-ng-model="locName">
 				<textarea class="form-control" data-ng-bind="locDesc" rows="8" data-ng-model="Location.locDesc" placeholder="Describe this location"></textarea>
-				<div class="btn btn-default" data-ng-click="Location.addLoc(Location,locDesc)">Add this location</div>
+				<div class="btn btn-default" data-ng-click="Location.addLoc(Location,locDesc)">Add This Location</div>
  
 				<div id="locationList"></div>
 			</div>
@@ -50,7 +50,7 @@
 
 			<!-- TAG CONTROLLER BEGIN -->				
 			<div data-ng-controller="tagController as Tag" class="form-group">
-				<div>Use spaces between tags.</div>
+				<div></div>
 				<input contentEditable="true" type="text" 
 				id="locdescription" 
 				class="form-control daytitle" 
@@ -59,9 +59,9 @@
 				</input>
 			</div> 
 			<!--END TAG CONTROLLER -->
-
-			<button class="btn btn-default" data-ng-click="Day.updateDay(Day,User);User.userViewSwitch='grid'">Update this day</button> 
-			<button class="btn btn-default" data-ng-click="User.userViewSwitch='grid'">Discard without saving</button>
+			<button class="btn btn-default" data-ng-click="User.userViewSwitch='grid'">Discard </button>
+			<button class="btn btn-default" data-ng-click="Day.updateDay(Day,User);User.userViewSwitch='grid'">Update This Day</button> 
+			
 
 			</form>
 		</div> <!-- end form-group -->
